@@ -1,3 +1,9 @@
+2003-02-28  Michael Meeks  <michael@localhost.localdomain>
+
+	* bonobo/bonobo-ui-util.c (bonobo_ui_util_xml_set_image):
+	NULL check on text, to guard against broken client XML,
+	add warning too.
+
 2003-02-21  Roozbeh Pournader  <roozbeh@sharif.edu>
 
 	* configure.in: Added "fa" to ALL_LINGUAS.
